Use Redis for storage

--- a/heroku.yml
+++ b/heroku.yml
@@ -6,3 +6,4 @@ build:
     GITHUB_SECRET: $GITHUB_SECRET
     LIVE_VIEW_SALT:  $LIVE_VIEW_SALT
     SECRET_KEY_BASE: $SECRET_KEY_BASE
+    REDIS_URL: $REDIS_URL
